# missalounas

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Procfile  README.md  compose.yml  main.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railpack.json  requirements.txt  start.sh
app/api/: config.py
app/models/: juvenes_response.py  unified_json.py
app/services/: config.py  db_interface.py  engine.py  utils.py
app/services/parsers/: compass_group.py  juvenes.py  sodexo.py
src/: utils.py
src/app/: config.py  db_check.py  utils.py
src/app/core/: config.py
src/core/: config.py  db_check.py  gunicorn.config.py
src/webscraper/: config.py  db_interface.py  engine.py  utils.py  web-scraper.py
src/webscraper/db/: db_interface.py  schema.txt
src/webscraper/models/: db_schema.py  juvenes_lookup.py  unified_json.py
src/webscraper/parsers/: base.py  compass_group.py  juvenes.py  sodexo.py  unica.py  unicafe.py
static/: daisy.css  main.css
templates/: base.html  index.html  navbar.html
