[project]
name = "missalounas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "jq>=1.10.0",
    "jsonschema>=4.25.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.44",
]

[tool.uv]
package = true

[project.scripts]
webscraper = "webscraper:main"

# [tool.setuptools]
# packages = ["."]
