[project]
name = "missalounas"
version = "0.2.0"
description = "Student restaurant menus in Finland. All in one place."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.1",
    "flask>=3.1.2",
    "flask-apscheduler>=1.13.1",
    "gunicorn>=23.0.0",
    "jq>=1.10.0",
    "jsonschema>=4.25.1",
    "psycopg[binary,pool]>=3.3.2",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.3",
    # "sqlalchemy>=2.0.44",
]

[tool.uv]
package = true

[project.scripts]
webscraper = "webscraper:main"

# [tool.setuptools]
# packages = ["."]
